--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>Sample HTML Page</title>
     <!-- Add any additional meta tags, styles, or scripts here -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1 class="title-heading">Welcome to Charlene's Website</h1>
+        <h2 class="email-line"><a href="mailto:charlenegaoq@gmail.com">charlenegaoq@gmail.com</a></h2>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
